--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "An API that gives you a random pokemon starter team",
   "main": "src/api.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/api.js"
+    "dev": "nodemon src/server.js",
+    "test": "mocha -w --parallel './test/**/*.test.js'",
+    "test:cov": "nyc npx mocha --parallel"
   },
   "keywords": [
     "Tests",
@@ -21,5 +24,12 @@
     "node": "17"
   },
   "author": "Wellington S. Almeida (WellsSA)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
+    "sinon": "^12.0.1"
+  }
 }
