--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/api.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "test": "mocha -w --parallel './test/**/*.test.js'",
-    "test:cov": "nyc npx mocha --parallel"
+    "dev": "npx nodemon src/server.js",
+    "test": "npx mocha -w --parallel 'test/**/*.test.js'",
+    "test:cov": "npx nyc npx mocha --parallel 'test/**/*.test.js'"
   },
   "keywords": [
     "Tests",
@@ -27,9 +27,11 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.4",
+    "git-commit-msg-linter": "^3.2.8",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
-    "sinon": "^12.0.1"
+    "sinon": "^12.0.1",
+    "supertest": "^6.1.6"
   }
 }
