--- a/.nycrc.json
+++ b/.nycrc.json
@@ -5,5 +5,6 @@
   "statements": 100,
   "check-coverage": true,
   "reporter": ["html", "text"],
-  "include": ["src/**/*.js"]
+  "include": ["src/**/*.js"],
+  "all": true
 }
