--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "c8": "^7.11.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "sinon": "^12.0.1",
