--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/api.js",
   "type": "module",
   "scripts": {
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "mocha -w --parallel 'test/**/*.test.js'",
     "test:unit": "mocha -w --parallel 'test/unit/*.test.js'",
