--- a/.nycrc.json
+++ b/.nycrc.json
@@ -6,5 +6,6 @@
   "check-coverage": true,
   "reporter": ["html", "text"],
   "include": ["src/**/*.js"],
+  "exclude": ["src/server.js"],
   "all": true
 }
